<resources>
    <string name="app_name">NavigationViewMenuDinamico</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="menu_opcion1">Ver Publicaciones</string>
    <string name="menu_opcion2">Actividad Reciente</string>
    <string name="menu_opcion3">Notificaciones</string>
    <string name="menu_opcion4">Administrar Publicaciones</string>
    <string name="menu_opcion5">Estadística de Visitas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>